# vixion

./: .env.example  .gitignore  README.md  alembic.ini  muestra_cp1.json  muestra_cp1_real.json  pyproject.toml  pytest.ini  resumen_cp1.json  reviews_checkpoint1.csv
admin/: admin.css  admin.js  index.html
alembic/: env.py
alembic/versions/: v0_prime_core_schema.py
app/: __init__.py  main.py
config/: feeds.example.yaml
data/alerts/: alerts_20260413_191902_261726.json  alerts_20260413_192246_494039.json  alerts_20260413_193235_877818.json  alerts_20260413_194812_628719.json
data/alerts_backup/: alerts_20260413_132929.json  alerts_20260413_133049_496893.json  alerts_20260413_133054_042189.json  alerts_20260413_133136_339199.json  alerts_20260413_133342_146457.json  alerts_20260413_133601_394606.json  alerts_20260413_134638_781097.json  alerts_20260413_170647_384651.json  alerts_20260413_191758_596064.json
scripts/: aggregate_narrative_outcomes.py  classify_narrative_lifecycle.py  classify_narratives.py  com.xolid.vixion.pipeline.plist  compute_drawdowns.py  compute_forward_returns.py  compute_time_to_peak.py  detect_narratives.py  generate_alerts.py  merge_sources.py  normalize_reddit.py  normalize_rss.py  ops_reference.sql  persist_market_context.py  persist_narrative_history.py  rank_narrative_edge.py  reddit_ingest.py  rss_cron_example.sh  rss_ingest.py  run_pipeline.py  run_pipeline_launchd.sh  score_articles.py  score_merged.py
tests/: __init__.py  conftest.py
vixion/: __init__.py  constants.py  contracts.py
web/: app.js  index.html  styles.css
(+121 files in other folders)
